new example data

--- a/download_catalog.ipynb
+++ b/download_catalog.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t1 = datetime(2022,7,1)\n",
-    "t2 = datetime(2023,7,31)\n",
+    "t1 = datetime(2019,2,20)\n",
+    "t2 = datetime(2019,3,7)\n",
     "day_list = pd.date_range(t1,t2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed for http://axial.ocean.washington.edu/hypo71/hypo71_20230404.dat\n",
-      "http://axial.ocean.washington.edu/hypo71/hypo71_20230731.dat\r"
+      "http://axial.ocean.washington.edu/hypo71/hypo71_20190307.dat\r"
      ]
     }
    ],
@@ -83,12 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# open a file, where you ant to store the data\n",
-    "with open('earthquake_times', 'wb') as f:\n",
+    "with open('earthquake_times_2019', 'wb') as f:\n",
     "    # dump information to that file\n",
     "    pickle.dump(times, f)\n",
     "\n"
